src/scss/modules/_navigation-panel.scss
.navigation-panel {
    z-index: 1;
    position: fixed;
    top: 0;
    right: 0;
    width: $ganeral-main-panel;
    height: $navigationPanelH;
    background: $background;
    border-bottom: $borderW solid $border-color;
    text-transform: uppercase;
    font-size: $navigation-font-size;
    line-height: $navigation-line-height;
    letter-spacing: $navigation-letter-spacing;

    @include bp-s {
        width: 100vw; 
        height: $navigationPanel-h-bps;
        border-left: none;
        border-right: none;
        font-size: $navigation-font-size-bps;
        letter-spacing: $navigation-letter-spacing-bps;
    }
}


.navigation-panel-home {
    z-index: 3;
    position: absolute;
    top: 100vh;
    right: 0;  
    width: $landing-right-panel; 
    border-left: $borderW solid $border-color;

    @include bp-s {
        top: 200vh;
        width: 100vw; 
        border-left: none;
    }
}


.no-intro {
    .navigation-panel-home {
        @include bp-s { top: 100vh; }
    }
}

.sticky {
    .navigation-panel-home.stick {
        top: 0;
    }
}

